--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -80,7 +80,7 @@ main.class=imageloaderinterface.ImageLoaderInterface
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
-platform.active=JDK_23
+platform.active=default_platform
 run.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
